# rtracer

./: .gitignore  CMakeLists.txt  generate_compile_commands_json.sh
include/canvas/: canvas.hpp  pixel.hpp
include/http/: server.hpp
include/math/: float64.hpp  vec3.hpp
src/: CMakeLists.txt  main.cpp
src/http/: server.cpp
src/math/: vec3.cpp
test/: float64_test.cpp  vec3_test.cpp
